css/buddypress.css
/* ... */
/* Up to Breakpoint 2. .fixed-bp-single-item only for small screens! */
@media screen and (max-width: 740px) {
	body.fixed-bp-single-item .entry-header {
		position: fixed;
		top: 62px;
		left: 0;
		right: 0;
		height: 55px;
		font-size: 1rem;
		padding: 13px 25px 11px 75px; /* 15px|25px + 32px + 11px */
		overflow: hidden;
		background: #fff;
		border-bottom: 1px solid #f9f9f9;
		text-align: left;
		-moz-box-shadow: 0 0 5px rgba(64, 64, 64, .5);
		-webkit-box-shadow: 0 0 5px rgba(64, 64, 64, .5);
		box-shadow: 0 0 5px rgba(64, 64, 64, .5);
		z-index: 10; /* along with #item-header-avatar */
	}

	body.fixed-bp-single-item .entry-title {
		font-size: 1em;
	}

	body.fixed-bp-single-item .entry-meta {
		margin-top: -4px;
		font-size: .8em;
	}

		body.fixed-bp-single-item .entry-meta > span {
			display: inline;
		}

	body.fixed-bp-single-item .entry-title,
	body.fixed-bp-single-item .entry-meta {
		text-align: left;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	body.fixed-bp-single-item #buddypress #item-header-avatar {
		position: fixed;
		top: 73px;
		left: 27px; /* 25px padding-left + 2px border-width of activity list avatars */
		transform: none;
	}

		body.fixed-bp-single-item #buddypress #item-header-avatar .item-avatar {
			width: 32px;
			height: 32px;
			padding: 0;
		}

			body.fixed-bp-single-item #buddypress #item-header-avatar .item-avatar,
			body.fixed-bp-single-item #buddypress #item-header-avatar img.avatar {
				border-radius: 4px; /* rounded square */
			}

		body.fixed-bp-single-item #buddypress #item-header-avatar .change-avatar {
			display: none;
		}

	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		position: fixed;
		top: 73px;
		z-index: 10;
	}

		body.js.fixed-bp-single-item #buddypress #item-actions {
			position: fixed;
			top: 116px;
			z-index: 9;
		}

		body.js.fixed-bp-single-item.item-actions-toggled #buddypress #item-actions {
			top: 126px;
		}

	/* Animation */
	body.fixed-bp-single-item .entry-header,
	body.fixed-bp-single-item #buddypress #item-header-avatar,
	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		-webkit-animation: slide-bp-fixed-entry-header .3s ease;
		animation: slide-bp-fixed-entry-header .3s ease;
	}

	@-webkit-keyframes slide-bp-fixed-entry-header {
		0% {	transform: translateY( -55px ); }
		100% {  transform: translateY( 0px ); }
	}

	@keyframes slide-bp-fixed-entry-header {
		0% {	transform: translateY( -55px ); }
		100% {  transform: translateY( 0px ); }
	}
}

/* Breakpoint 1 up to Breakpoint 2 */
@media screen and (min-width: 561px) and (max-width: 740px) {
	body.fixed-bp-single-item .entry-header {
		top: 76px;
		padding: 11px 91px 11px 78px;
	}

	body.fixed-bp-single-item #buddypress #item-header-avatar {
		top: 87px;
		left: 35px;
	}

	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		top: 87px;
		right: 48px;
		/* Shrink button again */
		width: 32px;
		height: 32px;
		padding: 5px;
		line-height: 32px;
	}

		body.fixed-bp-single-item #buddypress #item-actions {
			top: 130px;
			right: 42px;
		}

		body.js.fixed-bp-single-item.item-actions-toggled #buddypress #item-actions {
			top: 140px;
		}
}

/* Up to Breakpoint 2 with fixed .admin-bar */
@media screen and (min-width: 601px) and (max-width: 740px) {
	body.fixed-bp-single-item .entry-header {
		top: 122px;
	}

	body.fixed-bp-single-item #buddypress #item-header-avatar,
	body.fixed-bp-single-item #buddypress .item-actions-toggle {
		top: 133px;
	}

		body.js.fixed-bp-single-item #buddypress #item-actions {
			top: 176px;
		}

		body.js.fixed-bp-single-item.item-actions-toggled #buddypress #item-actions {
			top: 186px;
		}
}

/*--------------------------------------------------------------
2.3 Item list (members/groups)
--------------------------------------------------------------*/
.avatar-block .item-avatar,
.bp-item-list li {
	position: relative;
	display: inline-block; /* no floating */
	width: 50px;
	height: 50px;
	margin: 0 3px 7px 0; /* 4px space in between */
}

	.avatar-block .item-avatar a:before,
	.avatar-block .item-avatar a:after,
	.bp-item-list li .item-title {
		position: absolute;
		bottom: 100%;
		left: 50%;
		visibility: hidden;
		opacity: 0;
		pointer-events: none;
		/* Animation */
		-webkit-transition: all .25s ease-in;
		transition: all .25s ease-in;
	}

	.avatar-block .item-avatar a:before,
	.bp-item-list li .item-title a {
		display: inline-block;
		padding: 5px 8px;
		margin-bottom: 5px;
		-webkit-transform: translateX(-50%);
		transform: translateX(-50%);
		background-color: #404040;
		color: #fff;
		font-family: 'Montserrat', Arial, sans-serif;
		font-size: 11px;
		line-height: 1.3em;
		text-align: center;
	}

	.avatar-block .item-avatar a:before {
		content: attr(title);
	}

	.avatar-block .item-avatar a:after,
	.bp-item-list li .item-title:after {
		content: '';
		position: absolute;
		bottom: 0;
		margin-left: -5px;
		border-top: 5px solid #404040;
		border-left: 5px solid transparent;
		border-right: 5px solid transparent;
	}

	.avatar-block .item-avatar a:after {
		bottom: 100%;
	}

	.avatar-block .item-avatar a:hover:before,
	.avatar-block .item-avatar a:hover:after,
	.bp-item-list li:hover .item-title {
		visibility: visible;
		bottom: calc( 100% + 5px );
		opacity: 1;
	}

	.avatar-block .item-avatar a,
	.bp-item-list .item-avatar a {
		display: inline-block;
	}

	.avatar-block .item-avatar img,
	.bp-item-list .item-avatar img {
		vertical-align: bottom;
		width: 50px;
		height: 50px;
	}

/*--------------------------------------------------------------
2.4 Table List (notifications/messages)
--------------------------------------------------------------*/
#buddypress .table-list,
#buddypress .table-list ul {
	list-style: none;
	margin: 1.5em 0 0;
	padding: 0;
}

	#buddypress .table-list > li {
		margin: 0 -25px;
		padding: 10px 25px;
	}
/* ... */

